--- a/infl-styles/_form_layout.scss
+++ b/infl-styles/_form_layout.scss
@@ -17,6 +17,10 @@
       width: 40%;
       margin-top: 0.83em;
       text-align: right;
+
+      .button-group {
+        margin-right: 0px;
+      }
     }
 
     .pt-form-title-description {
